# FormalLanguages

./: CFGrammar.cpp  CFGrammar.h  CMakeLists.txt  Characters.cpp  Characters.h  LanguageChecker.cpp  LanguageChecker.h  README.md  RegExpHandler.cpp  RegExpHandler.h  SubWords.cpp  SubWords.h  main.cpp  tests.cpp  tests.txt
